--- a/src/app/menus/main-menu.component.html
+++ b/src/app/menus/main-menu.component.html
@@ -1,7 +1,8 @@
 <div class="ui menu inverted">
 	<div class="ui container">
 		<a href="#" class="header item"><img class="logo" src="assets/images/logo.png">Sipi</a>
-		<a href="#" class="item">Home</a>
+		<a href="categoria" class="item">Restaurantes</a>
+		<a href="#" class="item">Vida Nocturna</a>
 		<div class="ui simple dropdown item">
 			Dropdown <i class="dropdown icon"></i>
 			<div class="menu">
@@ -20,5 +21,9 @@
 				<a class="item" href="#">Link Item</a>
 			</div>
 		</div>
+		<div class="right item">
+          <a class="ui button blue">Resenar</a>
+          <a class="ui button red">Sign Up</a>
+        </div>
 	</div>
 </div>
