More good changes. Place and subcategory service developed more.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,6 +26,9 @@
 				<h4 class="ui inverted header">Sipi, la Guia Urbana</h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tempus purus eu orci finibus consectetur. Phasellus pretium viverra pulvinar. Sed commodo porta nisi, sed pellentesque arcu ultrices ac. Nulla semper tempor libero, nec auctor neque ullamcorper ut. Curabitur egestas sodales augue quis facilisis. Vivamus sit amet magna at neque molestie accumsan. Praesent risus est, euismod quis sapien vitae, viverra eleifend diam.</p>
 			</div>
+			<div class="threw wide column">
+				<img class="logo" src="assets/images/sipi-logo.png">
+			</div>
 		</div>
 	</div>
 </footer>
