--- a/src/app/menus/main-menu.component.html
+++ b/src/app/menus/main-menu.component.html
@@ -1,6 +1,6 @@
 <div class="ui menu inverted">
 	<div class="ui container">
-		<a href="#" class="header item"><img class="logo" src="assets/images/logo.png">Sipi</a>
+		<a href="#" class="header item"><img class="logo" src="assets/images/sipi-logo.png"></a>
 		<a href="categoria" class="item">Restaurantes</a>
 		<a href="#" class="item">Vida Nocturna</a>
 		<div class="ui simple dropdown item">
