More work with components and views.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,21 @@
 <!-- renders the component corresponding to the route -->
 <main class="ui main container">
 	<router-outlet></router-outlet>
+	<hr>
+	<section class="ui horizontal bulleted list">
+		<a class="item" href="#">Guatemala</a>
+		<a class="item" href="#">Belize</a>
+		<a class="item" href="#">El Salvador</a>
+		<a class="item" href="#">Honduras</a>
+		<a class="item" href="#">Nicaragua</a>
+		<a class="item" href="#">Costa Rica</a>
+		<a class="item" href="#">Panama</a>
+		<a class="item" href="#">Cuba</a>
+		<a class="item" href="#">Republica Dominicana</a>
+		<a class="item" href="#">Haiti</a>
+	</section>
 </main>
+
 
 <footer class="ui inverted vertical footer segment">
 	<div class="ui container">
@@ -24,7 +38,20 @@
 			</div>
 			<div class="seven wide column">
 				<h4 class="ui inverted header">Sipi, la Guia Urbana</h4>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tempus purus eu orci finibus consectetur. Phasellus pretium viverra pulvinar. Sed commodo porta nisi, sed pellentesque arcu ultrices ac. Nulla semper tempor libero, nec auctor neque ullamcorper ut. Curabitur egestas sodales augue quis facilisis. Vivamus sit amet magna at neque molestie accumsan. Praesent risus est, euismod quis sapien vitae, viverra eleifend diam.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tempus purus eu orci finibus consectetur. Phasellus pretium viverra pulvinar. Sed commodo porta nisi, sed pellentesque arcu ultrices ac.</p>
+				<ul>
+					<li><a href="#">Guatemala</a></li>
+					<li><a href="#">Belize</a></li>
+					<li><a href="#">El Salvador</a></li>
+					<li><a href="#">Honduras</a></li>
+					<li><a href="#">Nicaragua</a></li>
+					<li><a href="#">Costa Rica</a></li>
+					<li><a href="#">Panama</a></li>
+					<li><a href="#">Cuba</a></li>
+					<li><a href="#">Republica Dominicana</a></li>
+					<li><a href="#">Haiti</a></li>
+				</ul>
+				
 			</div>
 			<div class="threw wide column">
 				<img class="logo" src="assets/images/sipi-logo.png">
