--- a/src/app/forms/filter-restaurant-form.component.html
+++ b/src/app/forms/filter-restaurant-form.component.html
@@ -16,6 +16,10 @@
 </div>
 
 <div class="ui compact menu">
+	<a class="active green item">Con Ofertas</a>
+</div>
+
+<div class="ui compact menu">
 	<a class="green item">Entrega Domicilio</a>
 </div>
 
