--- a/src/app/menus/main-menu.component.html
+++ b/src/app/menus/main-menu.component.html
@@ -1,8 +1,17 @@
 <div class="ui menu inverted">
 	<div class="ui container">
-		<a href="#" class="header item"><img class="logo" src="assets/images/sipi-logo.png"></a>
+		<a href="" class="header item"><img class="logo" src="assets/images/sipi-logo.png"></a>
 		<a href="categoria" class="item">Restaurantes</a>
-		<a href="#" class="item">Vida Nocturna</a>
+		<a href="categoria" class="item">Vida Nocturna</a>
+		
+		<a href="inicio" class="item">Iniciar Sesion</a>
+		<a href="registro" class="item">Registro</a>
+		<a href="usuario" class="item">Usuario</a>
+		
+		<a href="agregar-lugar" class="item">Agregar Lugar</a>
+		
+		
+		
 		<div class="ui simple dropdown item">
 			Dropdown <i class="dropdown icon"></i>
 			<div class="menu">
@@ -21,9 +30,19 @@
 				<a class="item" href="#">Link Item</a>
 			</div>
 		</div>
+
+  <a class="item">
+    <i class="icon mail"></i> Messages
+    <div class="floating ui red label">22</div>
+  </a>
+  <a class="item">
+    <i class="icon users"></i> Friends
+    <div class="floating ui teal label">22</div>
+  </a>
+
 		<div class="right item">
           <a class="ui button blue">Resenar</a>
-          <a class="ui button red">Sign Up</a>
+          <a class="ui button red" href="registro">Registrarme</a>
         </div>
 	</div>
 </div>
