--- a/src/app/places/place-detail.component.html
+++ b/src/app/places/place-detail.component.html
@@ -16,9 +16,9 @@
 <span><i class="photo icon"></i>&nbsp;<a href="#">Ver Fotos</a></span>
 
 <address>
-	<i class="marker icon"></i>&nbsp;1234 Calle Principal<br>
+	<i class="marker icon"></i>&nbsp;{{place.address}}<br>
 	San Salvador, El Salvador
-	<i class="call icon"></i>&nbsp;(345) 234-78990<br>
+	<i class="call icon"></i>&nbsp;{{place.phone}}<br>
 </address>
 
 
