--- a/src/app/forms/sign-up-form.component.html
+++ b/src/app/forms/sign-up-form.component.html
@@ -1,27 +1,42 @@
+<h2>Registrese a Sipi</h2>
+<h3>Ya tiene cuenta? <a href="inicio">Inicie sesion</a></h3>
 <form class="ui form">
-	<div class="field">
-		<label for="name">Nombre</label>
-		<input type="text" name="name" placeholder="Name" [(ngModel)]="user.name" required>
-		<div *ngIf=""></div>
-		
-	</div>
 	<div class="field">
 		<label for="email">Email</label>
 		<input type="text" name="email" placeholder="Email" [(ngModel)]="user.email"required>
+		<div class="ui left pointing red basic label">Por favor ingrese un valor</div>
 		<div *ngIf=""></div>
 		
 	</div>
 	<div class="field">
 		<label for="password">Contrasena</label>
-		<input type="password" name="password" placeholder="Password" [(ngModel)]="user.password" required>
-		<div *ngIf=""></div>
-		
+		<input type="password" name="password" placeholder="Contrasena" [(ngModel)]="user.password" required>
+		<div class="ui left pointing red basic label">Por favor ingrese un valor</div>
+		<div *ngIf=""></div>	
 	</div>  
 	<div class="field">
 		<div class="ui checkbox">
 			<input type="checkbox" tabindex="0" class="hidden">
-			<label>Estoy de acuerdo con los terminos</label>
+			<label>Estoy de acuerdo con los <a href="#">terminos y privacidad</a>.</label>
 		</div>
 	</div>
-	<button class="ui button" type="submit">Submit</button>
+	<button class="ui button blue" type="submit">Registro</button>
+	
+	<div class="ui visible error message">
+  <i class="close icon"></i>
+  <div class="header">Hay errores con lo que quiere</div>
+  <ul class="list">
+    <li>Su contrasena esta mala</li>
+    <li>Ese usuario no existe</li>
+  </ul>
+</div>
+	
+	
+	
+	
+	
+	
+	
 </form>
+
+<button class="ui button blue"><i class="facebook icon"></i>&nbsp;Registro con Facebook</button>
