--- a/src/app/forms/search-form.component.html
+++ b/src/app/forms/search-form.component.html
@@ -1,4 +1,4 @@
-<div class="ui right action left icon input">
+<form class="ui right action left icon input" action="/categoria" method="GET">
   <i class="search icon"></i>
   <input type="text" placeholder="Search">
   <div class="ui basic floating dropdown button">
@@ -9,4 +9,5 @@
       <div class="item">Entire Site</div>
     </div>
   </div>
-</div>
+  <button type="submit" class="button blue ui">Encontrar</button>
+</form>
