--- a/src/app/places/place-list.component.html
+++ b/src/app/places/place-list.component.html
@@ -7,7 +7,7 @@
 	<div *ngFor="let place of places" class="card">
 		<div class="content">
 			<div class="image">
-				<img>
+				<img class="ui fluid image" src="http://www.goodfood.com.au/content/dam/images/g/r/f/g/6/8/image.related.wideLandscape.640x360.guxqme.gonbdl.png/1500598211481.jpg">
 			</div>
 			<div class="header">
 				<a href="#">{{place.name}}</a>
