--- a/src/app/menus/breadcrumb-menu.component.html
+++ b/src/app/menus/breadcrumb-menu.component.html
@@ -1,7 +1,7 @@
 <div class="ui breadcrumb">
 	<a class="section">Inicio</a>
 	<i class="right angle icon divider"></i>
-	<a class="section">Restaurantes</a>
+	<a class="section" href="categoria">Restaurantes</a>
 	<i class="right angle icon divider"></i>
 	<div class="active section">Asiatico</div>
 </div>
