--- a/src/app/menus/pagination-menu.component.html
+++ b/src/app/menus/pagination-menu.component.html
@@ -1,5 +1,5 @@
 <div class="ui pagination menu">
-  <a class="active item">
+  <a class="active item" (click)="changePage()">
     1
   </a>
   <div class="disabled item">
