--- a/src/app/places/place-detail.component.html
+++ b/src/app/places/place-detail.component.html
@@ -15,9 +15,11 @@
 
 <span><i class="photo icon"></i>&nbsp;<a href="#">Ver Fotos</a></span>
 
+<div id="map"></div>
+
 <address>
 	<i class="marker icon"></i>&nbsp;{{place.address}}<br>
-	San Salvador, El Salvador
+	{{place.city}}, {{place.country}}
 	<i class="call icon"></i>&nbsp;{{place.phone}}<br>
 </address>
 
