--- a/src/app/menus/main-menu.component.html
+++ b/src/app/menus/main-menu.component.html
@@ -1,48 +1,42 @@
 <div class="ui menu inverted">
-	<div class="ui container">
-		<a href="" class="header item"><img class="logo" src="assets/images/sipi-logo.png"></a>
-		<a href="categoria" class="item">Restaurantes</a>
-		<a href="categoria" class="item">Vida Nocturna</a>
+  <div class="ui container">
+    
+	<a href="" class="header item"><img class="logo" src="assets/images/sipi-logo.png"></a>
+    
+	<log-in-button></log-in-button>
+    
+	<sign-up-button></sign-up-button>
+    
+	<review-button></review-button>
+
+	<a href="agregar-lugar" class="item">Agregar Lugar</a>
+	
+	<a href="usuario" class="item">Jorge</a>
 		
-		<a href="inicio" class="item">Iniciar Sesion</a>
-		<a href="registro" class="item">Registro</a>
-		<a href="usuario" class="item">Usuario</a>
-		
-		<a href="agregar-lugar" class="item">Agregar Lugar</a>
-		
-		
-		
-		<div class="ui simple dropdown item">
-			Dropdown <i class="dropdown icon"></i>
-			<div class="menu">
-				<a class="item" href="#">Link Item</a>
-				<a class="item" href="#">Link Item</a>
-				<div class="divider"></div>
-				<div class="header">Header Item</div>
-				<div class="item">
-					<i class="dropdown icon"></i>
-					Sub Menu
-					<div class="menu">
-						<a class="item" href="#">Link Item</a>
-						<a class="item" href="#">Link Item</a>
-					</div>
-				</div>
-				<a class="item" href="#">Link Item</a>
-			</div>
+	<div class="ui simple dropdown item">
+      <a class="item">
+        <i class="icon mail"></i>
+        <div class="ui red label">22</div>
+      </a>
+      <div class="menu">
+	    <a class="item" href="#">Link Item</a>
+		<a class="item" href="#">Link Item</a>
+		<div class="divider"></div>
+		<div class="header">Header Item</div>
+		<div class="item">
+		  <i class="dropdown icon"></i>
+		  Sub Menu
+		  <div class="menu">
+		    <a class="item" href="#">Link Item</a>
+			<a class="item" href="#">Link Item</a>
+		  </div>
 		</div>
-
-  <a class="item">
-    <i class="icon mail"></i> Messages
-    <div class="floating ui red label">22</div>
-  </a>
-  <a class="item">
-    <i class="icon users"></i> Friends
-    <div class="floating ui teal label">22</div>
-  </a>
-
-		<div class="right item">
-          <a class="ui button blue">Resenar</a>
-          <a class="ui button red" href="registro">Registrarme</a>
-        </div>
+		<a class="item" href="#">Link Item</a>
+	  </div>
 	</div>
+
+    <div class="right item">
+
+    </div>
+  </div>
 </div>
