--- a/src/app/places/place-detail.component.html
+++ b/src/app/places/place-detail.component.html
@@ -27,6 +27,7 @@
 <span><i class="map outline icon"></i>&nbsp;<a href="#">Obtener Direcciones</a></span>
 <h2>Comentarios</h2>
 <review-list></review-list>
+<review-place-form></review-place-form>
 <h2>Relacionados</h2>
 <related-places-list></related-places-list>
 	</div>
