Finished review, log in and sign up button.

--- a/src/app/buttons/log-in-button.component.html
+++ b/src/app/buttons/log-in-button.component.html
@@ -1,1 +1,1 @@
-<button class="ui primary button" (click)="showLogInModal()">Acceder</button>
+<button class="ui orange button inverted" (click)="showLogInModal()">Acceder</button>
