--- a/src/app/buttons/sign-up-button.component.html
+++ b/src/app/buttons/sign-up-button.component.html
@@ -1,1 +1,1 @@
-<button class="ui primary button" (click)="showSignUpModal()">Registrarse</button>
+<button class="ui orange button inverted" (click)="showSignUpModal()">Registrarse</button>
