--- a/src/app/buttons/add-place-button.component.html
+++ b/src/app/buttons/add-place-button.component.html
@@ -1,1 +1,1 @@
-<button class="ui primary button" (click)="showSignUpModal()">Agregar un Lugar</button>
+<button class="ui orange button inverted" (click)="showSignUpModal()">Agregar un Lugar</button>
