--- a/src/app/buttons/review-button.component.html
+++ b/src/app/buttons/review-button.component.html
@@ -1,1 +1,4 @@
-<button class="ui primary button" (click)="showReviewModal()">Resenar</button>
+<button class="ui labeled icon orange button" (click)="showReviewModal()">
+  <i class="write icon"></i>
+  Reseñar
+</button>
