--- a/src/app/menus/main-menu.component.html
+++ b/src/app/menus/main-menu.component.html
@@ -1,4 +1,4 @@
-<div class="ui menu inverted">
+<div class="ui menu">
   <div class="ui container">
     
 	<a href="" class="header item"><img class="logo" src="assets/images/sipi-logo.png"></a>
