Main search now implemented with auto complete, albeit with fake data.

--- a/src/app/places/place-detail.component.html
+++ b/src/app/places/place-detail.component.html
@@ -1,36 +1,37 @@
 <!-- html templates with angularized markup -->
 <div class="ui grid">
-	<div class="twelve wide column">
+  <div class="twelve wide column">
 	
-<leaderboard-ad></leaderboard-ad>
+  <leaderboard-ad></leaderboard-ad>
 	
-<breadcrumb-menu></breadcrumb-menu>
+  <breadcrumb-menu></breadcrumb-menu>
 
+  <div *ngIf="place">
+    <h1 class="ui header">{{place.name}}</h1><a class="ui teal tag label">Confirmado</a>
+    <div class="ui star rating" data-rating="3"></div>
+    <span><a href="#">Asiatico</a>,&nbsp;<a href="#">Mediterraneo</a>,&nbsp;<a href="#">Vegetariano</a></span>
+    <p>This example shows how to use lazy loaded images, a sticky menu, and a simple text container</p>
+    <span><i class="photo icon"></i>&nbsp;<a href="#">Ver Fotos</a></span>
 
-<div *ngIf="place">
-	<h1 class="ui header">{{place.name}}</h1><a class="ui teal tag label">Confirmado</a>
-	<div class="ui star rating" data-rating="3"></div>
-<span><a href="#">Asiatico</a>,&nbsp;<a href="#">Mediterraneo</a>,&nbsp;<a href="#">Vegetariano</a></span>
-<p>This example shows how to use lazy loaded images, a sticky menu, and a simple text container</p>
+	<!-- google map -->
+    <div id="map"></div>
 
-<span><i class="photo icon"></i>&nbsp;<a href="#">Ver Fotos</a></span>
+    <address>
+      <i class="marker icon"></i>&nbsp;{{place.address}}<br>
+      {{place.city}}, {{place.country}}
+      <i class="call icon"></i>&nbsp;{{place.phone}}<br>
+    </address>
 
-<div id="map"></div>
+    <span><i class="map outline icon"></i>&nbsp;<a href="#">Obtener Direcciones</a></span>
 
-<address>
-	<i class="marker icon"></i>&nbsp;{{place.address}}<br>
-	{{place.city}}, {{place.country}}
-	<i class="call icon"></i>&nbsp;{{place.phone}}<br>
-</address>
+    <h2>Comentarios</h2>
 
+    <review-list></review-list>
 
-<span><i class="map outline icon"></i>&nbsp;<a href="#">Obtener Direcciones</a></span>
-<h2>Comentarios</h2>
-<review-list></review-list>
-<review-place-form></review-place-form>
-<h2>Relacionados</h2>
-<related-places-list></related-places-list>
-	</div>
+    <review-place-form></review-place-form>
+
+    <suggested-places-list></suggested-places-list>
+  </div>
 	
 	<div class="four wide column">
 		<img class="ui small image" src="https://media-cdn.tripadvisor.com/media/photo-s/06/c5/b8/36/delicious-food-from-xix.jpg">
