More work towards September sprint. Added svg logo, which needs to be cropped better.

--- a/src/app/menus/main-menu-b.component.html
+++ b/src/app/menus/main-menu-b.component.html
@@ -1,4 +1,8 @@
-<nav class="navbar navbar-expand-lg navbar-light brand-red">
+<header>
+<nav class="navbar navbar-expand-lg navbar-light brand-lightest-grey">
+  <a class="navbar-brand" href="#">
+    <img src="/assets/svgs/sipi-logo.svg" width="50" height="50" alt="">
+  </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -16,3 +20,4 @@
     </ul>
   </div>
 </nav>
+</header>
