--- a/src/app/pages/home-page.component.html
+++ b/src/app/pages/home-page.component.html
@@ -1,23 +1,11 @@
 <div class="outer-container">
-  <div class="container">
+  <div class="container mt-5 mb-5">
     <div class="row">
-      <div class="col-12 text-center mt-5">
+      <div class="col-12 text-center">
         <h1>Sipi, la guia urbana</h1>
         <h2 class="text-muted">Encontra lo que te gusta</h2>			
       </div>
     </div>
-    <div class="row">
-      <div class="col-5">
-        First input
-      </div>
-      <div class="col-5">
-        Second input
-      </div>
-      <div class="col-2">
-	      Button
-      </div>
-
-      <search-form></search-form>
-    </div>
+    <search-form></search-form>
   </div>
 </div>
