--- a/src/app/places/place-list.component.html
+++ b/src/app/places/place-list.component.html
@@ -1,9 +1,11 @@
 <filter-places-form></filter-places-form>
+<progress-bar></progress-bar>
+
 
 <div class="container">
   <div class="row mt-3">
     <div class="col-10">
-      <h1>Los 10 mejores restaurantes en Antigua</h1>
+      <h1 class="h3">Los 10 mejores restaurantes en Antigua</h1>
     </div>
   </div>
 
@@ -45,7 +47,7 @@
       </div><!-- /.card -->
     </div>
     <div class="col-12 col-sm-12 col-md-4">
-      Secondary content here
+      <div id="map"></div>
     </div>
 
 
