--- a/src/app/forms/search-form.component.html
+++ b/src/app/forms/search-form.component.html
@@ -1,11 +1,11 @@
-<form #f="ngForm" (ngSubmit)="runSearch(f)" novalidate>
-  <div class="col-5">
+<form #f="ngForm" (ngSubmit)="runSearch(f)" class="row mt-5 mb-5" novalidate>
+  <div class="col-12 col-sm-12 col-md-5">
     <ng2-completer name="place" type="text" placeholder="restaurantes, La Gastroteca" ngModel required #place="ngModel" [datasource]="places"></ng2-completer>
   </div>
-  <div class="col-5">
+  <div class="col-12 col-sm-12 col-md-5">
     <ng2-completer name="location" type="text" placeholder="San Salvador, Antigua, Cuba" ngModel #location="ngModel" [datasource]="locations"></ng2-completer>
   </div>
-  <div class="col-2">
+  <div class="col-12 col-sm-12 col-md-2">
     <button type="submit" class="btn btn-primary"><i class="material-icons md-14">create</i>&nbsp;Encontrar</button>
   </div>
 </form>
