--- a/src/app/places/place-detail.component.html
+++ b/src/app/places/place-detail.component.html
@@ -1,4 +1,13 @@
 <div class="container">
+  
+  <!--
+  <div class="row mt-3 mb-3">
+    <div class="col-12 text-center">
+      <leaderboard-ad></leaderboard-ad>
+    </div>
+  </div>
+  -->
+
   <div class="row mt-5">
     <div class="col-xs-12 col-sm-12 col-md-8">	
       <breadcrumb-menu></breadcrumb-menu>
@@ -6,6 +15,7 @@
       <div *ngIf="place">
         <h1>{{place.name}}</h1>
 	<span class="badge badge-pill badge-primary">Confirmado</span>
+	<span class="badge badge-pill badge-primary">?Es este su negocio?</span>
 	<div>
           <i class="material-icons">grade</i>
 	  <i class="material-icons">grade</i>
