--- a/src/app/progress-bars/progress-bar.component.html
+++ b/src/app/progress-bars/progress-bar.component.html
@@ -1,6 +1,3 @@
-<div class="ui progress">
-	<div class="bar">
-		<div class="progress"></div>
-	</div>
-	<div class="label">Completado</div>
+<div class="progress">
+  <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
 </div>
