More September sprint work.

--- a/src/app/places/place-detail.component.html
+++ b/src/app/places/place-detail.component.html
@@ -54,7 +54,7 @@
 	<i class="material-icons">web</i><a href="{{place.website}}">{{place.website}}</a><br/>
 	<span><i class="material-icons">phone</i> {{place.phone}}</span>
 
-	<h2>Horario</h2>
+	<h2 class="h5">Horario</h2>
 
         <place-schedule></place-schedule>
 	   
