--- a/src/assets/sass/sipi.scss
+++ b/src/assets/sass/sipi.scss
@@ -59,8 +59,10 @@
  * Sipi v.3.0.0-alpha
  */
 @import 'sipi/colors';
+@import 'sipi/icons';
 @import 'sipi/type';
 @import 'sipi/header';
+@import 'sipi/filters';
 @import 'sipi/footer';
 @import 'sipi/homepage';
 @import 'sipi/main';
