--- a/src/assets/css/sipi.css
+++ b/src/assets/css/sipi.css
@@ -4597,6 +4597,33 @@ a.text-dark:focus, a.text-dark:hover {
 /**
  * Sipi v.3.0.0-alpha
  */
+/* Rules for sizing the icon. */
+.material-icons.md-18 {
+  font-size: 18px; }
+
+.material-icons.md-24 {
+  font-size: 24px; }
+
+.material-icons.md-36 {
+  font-size: 36px; }
+
+.material-icons.md-48 {
+  font-size: 48px; }
+
+/* Rules for using icons as black on a light background. */
+.material-icons.md-dark {
+  color: rgba(0, 0, 0, 0.54); }
+
+.material-icons.md-dark.md-inactive {
+  color: rgba(0, 0, 0, 0.26); }
+
+/* Rules for using icons as white on a dark background. */
+.material-icons.md-light {
+  color: white; }
+
+.material-icons.md-light.md-inactive {
+  color: rgba(255, 255, 255, 0.3); }
+
 html {
   font-family: 'Roboto', sans-serif !important; }
 
@@ -4622,6 +4649,12 @@ header {
     transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s; }
   header .left-input {
     border-radius: 0 0 .25rem .25rem; }
+
+section .filters {
+  background-color: #bdc1c5; }
+
+.filters {
+  background-color: #d8dbdd; }
 
 footer {
   background-color: #25282b;
