The place list component now has the ability to set the title: have to do this for the rest of the pages.

--- a/src/app/menus/main-menu-b.component.html
+++ b/src/app/menus/main-menu-b.component.html
@@ -21,7 +21,7 @@
       <div class="col-12 col-sm-1">
         <a class="nav-item nav-link" href="#">Jorge</a>
       </div>
-      <div class="col-12 col-sm-4">
+      <div class="col-12">
         <search-form-b></search-form-b>
       </div>
     </nav>
