--- a/src/app/forms/filter-places-form.component.html
+++ b/src/app/forms/filter-places-form.component.html
@@ -2,7 +2,9 @@
   <form class="container">
     <div class="row">
       <div class="col-2">
-        <button type="button" class="btn btn-secondary btn-sm"><i class="material-icons md-18">schedule</i>&nbsp;Abiertos</button>
+        <button class="btn btn-secondary btn-sm" [ngClass]="{ 'active': myString == ThisIsActiveString }" type="button">
+	  <i class="material-icons md-18">schedule</i>&nbsp;Abiertos
+	</button>
       </div>
       <div class="col-2">
         <button type="button" class="btn btn-secondary btn-sm"><i class="material-icons md-18">filter_list</i>&nbsp;Filtros</button>
