Document titles now working. First pass at enabling button states.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,22 +15,22 @@
       <div class="col-12 col-sm-4 col-md-2 border-right">
         <h3 class="h6 underline">Sipi</h3>
 	<ul class="list">
-          <li><a href="#">Direccion</a></li>
-          <li><a href="#">Contacto</a></li>
+          <li><a routerLink="direccion">Direccion</a></li>
+          <li><a routerLink="contacto">Contacto</a></li>
         </ul>
       </div>
       <div class="col-12 col-sm-4 col-md-2 border-right">
         <h3 class="h6 underline">Servicios</h3>
 	<ul class="list">
-          <li><a href="#">Como te podemos ayudar?</a></li>
-          <li><a href="#">Publicidad</a></li>
+          <li><a routerLink="servicios/como-te-podemos-ayudar">Como te podemos ayudar?</a></li>
+          <li><a routerLink="servicios/publicidad">Publicidad</a></li>
         </ul>
       </div>
       <div class="col-12 col-sm-3 col-md-3">
         <h3 class="h6 underline">Contacto</h3>
 	<ul class="list">
-          <li><a href="#">Como te podemos ayudar?</a></li>
-          <li><a href="#">Publicidad</a></li>
+          <li><a routerLink="contacto/como-te-podemos-ayudar">Como te podemos ayudar?</a></li>
+          <li><a routerLink="contacto/publicidad">Publicidad</a></li>
         </ul>
       </div>
       <div class="col-12 col-md-3">
