--- a/src/assets/sass/sipi/colors.scss
+++ b/src/assets/sass/sipi/colors.scss
@@ -1,4 +1,9 @@
 $brand-red: #dc3545;
 $brand-blue: #16a2b8;
+$brand-green: #218838;
 $brand-grey: #868e96;
 $brand-white: #fff;
+
+.enabled {
+  background-color: $brand-green;
+}
