--- a/src/assets/sass/sipi/homepage.scss
+++ b/src/assets/sass/sipi/homepage.scss
@@ -1,5 +1,6 @@
 .homepage-image {
-  background-image: url('https://assets.bonappetit.com/photos/58e29a4f8f4c125ce35a1301/16:9/w_1200,c_limit/0417-web-pupusa-beauty.jpg');
+  background-color: grey;
+  //background-image: url('https://assets.bonappetit.com/photos/58e29a4f8f4c125ce35a1301/16:9/w_1200,c_limit/0417-web-pupusa-beauty.jpg');
   height: 600px;
 }
 
