--- a/src/app/menus/breadcrumb-menu.component.html
+++ b/src/app/menus/breadcrumb-menu.component.html
@@ -1,5 +1,5 @@
 <ol class="breadcrumb">
-  <li class="breadcrumb-item"><a routerLink="#">{{country}}</a></li>
-  <li class="breadcrumb-item"><a routerLink="#">{{city}}</a></li>
-  <li class="breadcrumb-item active"><a href="#">Tacos</a></li>
+  <li class="breadcrumb-item"><a routerLink="/busqueda">{{country}}</a></li>
+  <li class="breadcrumb-item"><a routerLink="/busqueda">{{city}}</a></li>
+  <li class="breadcrumb-item active"><a routerLink="/busqueda">Tacos</a></li>
 </ol>
